--- a/jobSearchService/package.json
+++ b/jobSearchService/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/elasticsearch": "^7.15.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "elasticsearch": "^16.7.2",
