--- a/jobSearchService/Dockerfile
+++ b/jobSearchService/Dockerfile
@@ -1,7 +1,7 @@
-FROM node:14
+FROM node:alpine3.10
 
 WORKDIR /searchapiapp
 COPY package*.json ./
 RUN npm install
-EXPOSE 2121
+EXPOSE 8000
 CMD ["node", "index.js"]
