--- a/notificationService/package.json
+++ b/notificationService/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "env2": "^2.2.2",
     "express": "^4.17.1",
-    "kafkajs": "^1.15.0"
+    "kafkajs": "^1.15.0",
+    "mongodb": "^4.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
