modification on jobSearch service docker and app, created k8s config for job search

--- a/jobSearchService/Dockerfile
+++ b/jobSearchService/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:alpine3.10
-
-WORKDIR /searchapiapp
-COPY package*.json ./
+COPY . .
 RUN npm install
 EXPOSE 8000
-CMD ["node", "index.js"]
+ENTRYPOINT ["node", "index.js"]
