--- a/jobSearchService/package.json
+++ b/jobSearchService/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
     "nodemon": "^2.0.13"
   }
 }
