--- a/recruiterSearchService/package.json
+++ b/recruiterSearchService/package.json
@@ -12,6 +12,7 @@
     "@elastic/elasticsearch": "^7.15.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
     "nodemon": "^2.0.13"
   }
 }
