--- a/k8sConfig/appConfig.yaml
+++ b/k8sConfig/appConfig.yaml
@@ -5,5 +5,5 @@ metadata:
 data:
   job-search-client-id: jobSearchClientId8000
   es-address: http://jobsearches-es-http:9200/
-  kafka-address: http://kafka:9092
+  kafka-address: kafka:9092
   kafka-job-create-topic-name: jobCreated
