modified job recruiter service modified for docker

--- a/k8sConfig/appConfig.yaml
+++ b/k8sConfig/appConfig.yaml
@@ -7,3 +7,4 @@ data:
   es-address: http://jobsearches-es-http:9200/
   kafka-address: kafka:9092
   kafka-job-create-topic-name: jobCreated
+  kafka-recruiter-create-topic-name: recruiterCreated
