--- a/k8sConfig/apiGateway.yaml
+++ b/k8sConfig/apiGateway.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api-gateway-ms
-          image: pyordan/js-api-gateway-service:1.2
+          image: pyordan/js-api-gateway-service:1.3
           ports:
           - containerPort: 8000
           env:
@@ -37,7 +37,7 @@ spec:
           - name: JOB_API
             value: "/jobs"
           - name: ACCOUNT_API
-            value: "/accounts"               
+            value: "/api/auth"               
 ---
 apiVersion: v1
 kind: Service
