--- a/candidateService/src/main/resources/application.properties
+++ b/candidateService/src/main/resources/application.properties
@@ -6,7 +6,6 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.defer-datasource-initialization=true
@@ -17,3 +16,16 @@ app.jwtSecret= JWTSuperSecretKey
 app.jwtExpirationInMs = 604800000
 
 app.AccountService = http://127.0.0.1:8081
+
+
+spring.kafka.consumer.bootstrap-servers = ${KAFKA_SERVER}
+spring.kafka.consumer.group-id= ${KAFKA_GROUP_ID}
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
+
+spring.kafka.producer.bootstrap-servers = ${KAFKA_SERVER}
+spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
+
+app.jobseekerTopic= ${KAFKA_JOB_TOPIC}
