--- a/jobService/src/main/resources/application.properties
+++ b/jobService/src/main/resources/application.properties
@@ -1,31 +1,34 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/account
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+server.port=${SERVER_PORT}
+spring.datasource.url=jdbc:mysql://${DB_URL}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.defer-datasource-initialization=true
 spring.jackson.serialization.fail-on-empty-beans=false
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtSecret= ${JWT_SECRET}
+app.jwtExpirationInMs = ${JWT_EXPIRATION}
 
-app.AccountService = http://127.0.0.1:8081
+app.AccountService = ${ACCOUNT_SERVICE_SERVICE}
 
+spring.kafka.consumer.bootstrap-servers = ${KAFKA_SERVER}
+spring.kafka.consumer.group-id= ${KAFKA_GROUP_ID}
+spring.kafka.consumer.auto-offset-reset = earliest
+spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer = org.apache.kafka.common.serialization.StringDeserializer
 
-spring.kafka.producer.bootstrap-servers = localhost:9092
-spring.kafka.consumer.bootstrap-servers = localhost:9092
+spring.kafka.producer.bootstrap-servers = ${KAFKA_SERVER}
 spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 
-
-
-app.jobServiceTopic = KAFKA_JOB_TOPIC
+app.jobServiceTopic = ${KAFKA_JOB_TOPIC}
 
 
 spring.jackson.serialization.write_dates_as_timestamps= false
