--- a/candidateService/src/main/resources/application.properties
+++ b/candidateService/src/main/resources/application.properties
@@ -29,3 +29,5 @@ spring.kafka.producer.key-serializer = org.apache.kafka.common.serialization.Str
 spring.kafka.producer.value-serializer = org.apache.kafka.common.serialization.StringSerializer
 
 app.jobseekerTopic= ${KAFKA_JOB_TOPIC}
+
+spring.jackson.serialization.write_dates_as_timestamps= false
