--- a/emailService/package.json
+++ b/emailService/package.json
@@ -12,6 +12,7 @@
     "@sendgrid/mail": "^7.5.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "kafkajs": "^1.15.0",
     "nodemon": "^2.0.14"
   }
 }
