--- a/k8sConfig/emailService.yaml
+++ b/k8sConfig/emailService.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: email-service-ms
-          image: pyordan/js-email-service:1.0
+          image: pyordan/js-email-service:1.1
           ports:
           - containerPort: 8000
           env:
@@ -28,7 +28,10 @@ spec:
                 name: job-search-app-config
                 key: kafka-address
           - name: EMAIL_SERVICE_TOPIC
-            value: "email-topic"
+            valueFrom: 
+              configMapKeyRef:
+                name: job-search-app-config
+                key: email-kafka-topic
           - name: EMAIL_SERVICE_APP
             value: "email-service-app"
           - name: EMAIL_SERVICE_GROUP
