--- a/candidateService/src/main/resources/application.properties
+++ b/candidateService/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=8080
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/account
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create-drop
+server.port=${SERVER_PORT}
+spring.datasource.url=jdbc:mysql://${DB_URL}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -12,10 +12,10 @@ spring.jpa.defer-datasource-initialization=true
 spring.jackson.serialization.fail-on-empty-beans=false
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type.descriptor.sql=trace
-app.jwtSecret= JWTSuperSecretKey
-app.jwtExpirationInMs = 604800000
+app.jwtSecret= ${JWT_SECRET}
+app.jwtExpirationInMs = ${JWT_EXPIRATION}
 
-app.AccountService = http://127.0.0.1:8081
+app.AccountService = ${ACCOUNT_SERVICE}
 
 
 spring.kafka.consumer.bootstrap-servers = ${KAFKA_SERVER}
