--- a/k8sConfig/apiGateway.yaml
+++ b/k8sConfig/apiGateway.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api-gateway-ms
-          image: pyordan/js-api-gateway-service:1.3
+          image: pyordan/js-api-gateway-service:1.4
           ports:
           - containerPort: 8000
           env:
@@ -30,6 +30,8 @@ spec:
             value: http://jobs-ms-service:8000
           - name: ACCOUNTS_ENDPOINT
             value: http://account-ms-service:8000
+          - name: CANDIDATE_ENDPOINT
+            value: http://candidates-ms-service:8000
           - name: JOB_SEARCH_API
             value: "/api/job/search"
           - name: CANDIDATE_SEARCH_API
@@ -38,6 +40,8 @@ spec:
             value: "/api/js"
           - name: ACCOUNT_API
             value: "/api/auth"               
+          - name: CANDIDATE_API
+            value: "/api/ca"  
 ---
 apiVersion: v1
 kind: Service
