--- a/k8sConfig/appConfig.yaml
+++ b/k8sConfig/appConfig.yaml
@@ -7,6 +7,6 @@ data:
   es-address: http://elastic:E180Yn8X2Lwm885TiHpBn10k@elastic-jobsearch-es-http:9200
   kafka-address: kafka:9092
   kafka-job-create-topic-name: jobCreated
-  kafka-recruiter-create-topic-name: recruiterCreated
+  kafka-candidate-modified-topic-name: candidateModified
   recruiter-search-client-id: recruiterSearchClientId8000
   email-kafka-topic: email-topic-azx
