made service names with istio namespace config

--- a/k8sConfig/apiGateway.yaml
+++ b/k8sConfig/apiGateway.yaml
@@ -23,15 +23,15 @@ spec:
           - name: PORT 
             value: "8000"
           - name: JOB_SEARCH_ENDPOINT
-            value: http://job-search-ms-service:8000
+            value: http://http-job-search-ms-service:8000
           - name: CANDIDATE_SEARCH_ENDPOINT
-            value: http://recruiter-search-ms-service:8000
+            value: http://http-recruiter-search-ms-service:8000
           - name: JOBS_ENDPOINT
-            value: http://jobs-ms-service:8000
+            value: http://http-jobs-ms-service:8000
           - name: ACCOUNTS_ENDPOINT
-            value: http://account-ms-service:8000
+            value: http://http-account-ms-service:8000
           - name: CANDIDATE_ENDPOINT
-            value: http://candidates-ms-service:8000
+            value: http://http-candidates-ms-service:8000
           - name: JOB_SEARCH_API
             value: "/api/job/search"
           - name: CANDIDATE_SEARCH_API
@@ -46,7 +46,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: api-gateway-ms-service
+  name: http-api-gateway-ms-service
 spec:
   selector:
     app: api-gateway-ms
