--- a/k8sConfig/accountService.yaml
+++ b/k8sConfig/accountService.yaml
@@ -50,7 +50,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: account-ms-service
+  name: http-account-ms-service
 spec:
   selector:
     app: account-ms
