--- a/k8sConfig/jobSearch.yaml
+++ b/k8sConfig/jobSearch.yaml
@@ -60,7 +60,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: job-search-ms-service
+  name: http-job-search-ms-service
 spec:
   selector:
     app: job-search-ms
