--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -7,21 +7,50 @@ on:
     branches: [ main ]
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
         
     - name: Run a multi-line build
       run: |
-        docker build accoutService --tag pyordan/js-account-service:$(date +%s)
-        docker build apiGateway --tag pyordan/js-api-gateway-service:$(date +%s)
-        docker build candidateService --tag pyordan/js-candidates-service:$(date +%s)
-        docker build emailService --tag pyordan/js-email-service:$(date +%s)
-        docker build jobSearchService --tag pyordan/js-job-search-service:$(date +%s)
-        docker build jobService --tag pyordan/js-jobs-service:$(date +%s)
-        docker build notificationService --tag pyordan/js-notification-service:$(date +%s)
-        docker build recruiterSearchService --tag pyordan/js-recruiter-search-service:$(date +%s)
+        docker build accoutService --tag pyordan/js-account-service:latest
+        docker build apiGateway --tag pyordan/js-api-gateway-service:latest
+        docker build candidateService --tag pyordan/js-candidates-service:latest
+        docker build emailService --tag pyordan/js-email-service:latest
+        docker build jobSearchService --tag pyordan/js-job-search-service:latest
+        docker build jobService --tag pyordan/js-jobs-service:latest
+        docker build notificationService --tag pyordan/js-notification-service:latest
+        docker build recruiterSearchService --tag pyordan/js-recruiter-search-service:latest
+
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: |
+            pyordan/js-account-service:latest
+            pyordan/js-api-gateway-service:latest
+            pyordan/js-candidates-service:latest
+            pyordan/js-email-service:latest
+            pyordan/js-job-search-service:latest
+            pyordan/js-jobs-service:latest
+            pyordan/js-notification-service:latest
+            pyordan/js-recruiter-search-service:latest
