--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,8 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-        
+    - uses: actions/checkout@v2 
     - name: Run a multi-line build
       run: |
         docker build accoutService --tag pyordan/js-account-service:latest
@@ -40,17 +39,26 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: true
-          tags: |
-            pyordan/js-account-service:latest
-            pyordan/js-api-gateway-service:latest
-            pyordan/js-candidates-service:latest
-            pyordan/js-email-service:latest
-            pyordan/js-job-search-service:latest
-            pyordan/js-jobs-service:latest
-            pyordan/js-notification-service:latest
-            pyordan/js-recruiter-search-service:latest
+        run: |
+          docker push pyordan/js-account-service:latest
+          docker push pyordan/js-api-gateway-service:latest
+          docker push pyordan/js-candidates-service:latest
+          docker push pyordan/js-email-service:latest
+          docker push pyordan/js-job-search-service:latest
+          docker push pyordan/js-jobs-service:latest
+          docker push pyordan/js-notification-service:latest
+          docker push pyordan/js-recruiter-search-service:latest
+        
+        
+#         uses: docker/build-push-action@v2
+#         with:
+#           push: true
+#           tags: |
+#             pyordan/js-account-service:latest
+#             pyordan/js-api-gateway-service:latest
+#             pyordan/js-candidates-service:latest
+#             pyordan/js-email-service:latest
+#             pyordan/js-job-search-service:latest
+#             pyordan/js-jobs-service:latest
+#             pyordan/js-notification-service:latest
+#             pyordan/js-recruiter-search-service:latest
