--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -39,26 +39,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-account-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-api-gateway-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-candidates-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-email-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-jobs-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
+        name: push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: |
+            pyordan/js-account-service:latest
+            pyordan/js-api-gateway-service:latest
+            pyordan/js-candidates-service:latest
+            pyordan/js-email-service:latest
+            pyordan/js-job-search-service:latest
+            pyordan/js-jobs-service:latest
+            pyordan/js-notification-service:latest
+            pyordan/js-recruiter-search-service:latest
+            
+            
+#         run: |
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-account-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-api-gateway-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-candidates-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-email-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-jobs-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
+#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
         
-        
-#         uses: docker/build-push-action@v2
-#         with:
-#           push: true
-#           tags: |
-#             pyordan/js-account-service:latest
-#             pyordan/js-api-gateway-service:latest
-#             pyordan/js-candidates-service:latest
-#             pyordan/js-email-service:latest
-#             pyordan/js-job-search-service:latest
-#             pyordan/js-jobs-service:latest
-#             pyordan/js-notification-service:latest
-#             pyordan/js-recruiter-search-service:latest
+      
