--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,10 +13,10 @@ jobs:
     - uses: actions/checkout@v2 
     - name: Run a multi-line build
       run: |
-        docker build accoutService --tag pyordan/js-account-service:latest
-        docker build apiGateway --tag pyordan/js-api-gateway-service:latest
-        docker build candidateService --tag pyordan/js-candidates-service:latest
-        docker build emailService --tag pyordan/js-email-service:latest
+        # docker build accoutService --tag pyordan/js-account-service:latest
+        # docker build apiGateway --tag pyordan/js-api-gateway-service:latest
+        # docker build candidateService --tag pyordan/js-candidates-service:latest
+        # docker build emailService --tag pyordan/js-email-service:latest
         docker build jobSearchService --tag pyordan/js-job-search-service:latest
         docker build jobService --tag pyordan/js-jobs-service:latest
         docker build notificationService --tag pyordan/js-notification-service:latest
@@ -29,9 +29,6 @@ jobs:
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
