--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,21 +31,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: |
-            pyordan/js-account-service:latest
-            pyordan/js-api-gateway-service:latest
-            pyordan/js-candidates-service:latest
-            pyordan/js-email-service:latest
-            pyordan/js-job-search-service:latest
-            pyordan/js-jobs-service:latest
-            pyordan/js-notification-service:latest
-            pyordan/js-recruiter-search-service:latest
+        name: Run a multi-line build
+        run: |
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
             
             
 #         run: |
@@ -57,5 +47,13 @@ jobs:
 #           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-jobs-service:latest
 #           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
 #           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
+
+#         name: push
+#         id: docker_build
+#         uses: docker/build-push-action@v2
+#         with:
+#           context: .
+#           push: true
+#           tags: |
         
       
