--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,59 +1,33 @@
-name: Docker Image CI
+name: ci
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    branches:
+      - 'master'
 
 jobs:
-  build:
+  docker:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2 
-    - name: Run a multi-line build
-      run: |
-        docker build jobSearchService --tag pyordan/js-job-search-service:latest
-        docker build notificationService --tag pyordan/js-notification-service:latest
-        docker build recruiterSearchService --tag pyordan/js-recruiter-search-service:latest
-
-  push:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
+      -
+        name: Checkout
+        uses: actions/checkout@v2
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
       -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
         name: Login to DockerHub
-        uses: docker/login-action@v1 
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Run a multi-line build
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
-            
-            
-#         run: |
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-account-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-api-gateway-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-candidates-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-email-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-jobs-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-notification-service:latest
-#           docker push ${{ secrets.DOCKERHUB_USERNAME }}/js-recruiter-search-service:latest
-
-#         name: push
-#         id: docker_build
-#         uses: docker/build-push-action@v2
-#         with:
-#           context: .
-#           push: true
-#           tags: |
-        
-      
+        name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: ./apiGateway/
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/js-api-gateway-service:latest
