--- a/.github/workflows/job-search-deployment.yml
+++ b/.github/workflows/job-search-deployment.yml
@@ -9,6 +9,12 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - name: Get next version
+        uses: reecetech/version-increment@2021.10.4
+        id: version
+        with:
+          scheme: semver
+          increment: patch
       -
         name: Checkout
         uses: actions/checkout@v2
@@ -30,5 +36,5 @@ jobs:
         with:
           context: ./jobSearchService/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/js-api-job-search-service:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/js-api-job-search-service:${{ steps.version.outputs.version }}
 
