tsg modified to latest for all yaml files

--- a/k8sConfig/accountService.yaml
+++ b/k8sConfig/accountService.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: account-ms
-          image: pyordan/js-account-service:1.0
+          image: pyordan/js-account-service:latest
           ports:
           - containerPort: 8000
           env:
