--- a/k8sConfig/jobSearch.yaml
+++ b/k8sConfig/jobSearch.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: job-search-ms
-          image: pyordan/js-job-search-service:2.3
+          image: pyordan/js-job-search-service:latest
           ports:
           - containerPort: 8000
           env:
