--- a/k8sConfig/jobsService.yaml
+++ b/k8sConfig/jobsService.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: jobs-ms
-          image: pyordan/js-jobs-service:1.5
+          image: pyordan/js-jobs-service:latest
           ports:
           - containerPort: 8000
           env:
