--- a/k8sConfig/notificationService.yaml
+++ b/k8sConfig/notificationService.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: notification-service-ms
-          image: pyordan/js-notification-service:1.6
+          image: pyordan/js-notification-service:latest
           ports:
           - containerPort: 8000
           env:
