--- a/.github/workflows/job-search-deployment.yml
+++ b/.github/workflows/job-search-deployment.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           context: ./jobSearchService/
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/js-api-job-search-service:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/js-job-search-service:latest
 
