--- a/jobSearchService/package.json
+++ b/jobSearchService/package.json
@@ -11,6 +11,7 @@
     "dependencies": {
         "@elastic/elasticsearch": "^7.15.0",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^10.0.0",
         "elasticsearch": "^16.7.2",
         "express": "^4.17.1",
