--- a/apiGateway/package.json
+++ b/apiGateway/package.json
@@ -9,6 +9,7 @@
   "author": "Yordanos Desta",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1"
