--- a/k8sConfig/jobsService.yaml
+++ b/k8sConfig/jobsService.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: jobs-ms
           image: pyordan/js-jobs-service:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 8000
           env:
