--- a/k8sConfig/apiGateway.yaml
+++ b/k8sConfig/apiGateway.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: api-gateway-ms
           image: pyordan/js-api-gateway-service:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 8000
           env:
