--- a/k8sConfig/recruiterSearch.yaml
+++ b/k8sConfig/recruiterSearch.yaml
@@ -17,6 +17,7 @@ spec:
       containers:
         - name: recruiter-search-ms
           image: pyordan/js-recruiter-search-service:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 8000
           env:
